<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingBottom="12dp"
            android:text="+56 9 " />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/msgHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/smsMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/directBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/direct_send"
        android:theme="@style/PrimaryButton" />

    <Button
        android:id="@+id/indirectBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indirect_send"
        android:theme="@style/PrimaryButton" />

    <TextView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/warning"
        android:textColor="@android:color/white" />

</LinearLayout>
